# windmin

./: README.md  install.sh  pyproject.toml  windmin.conf  windmin.desktop  windmin.desktop.de  windmin.desktop.en  wxglade.wxg  wxglade.wxg~
tests/: test_windmin.py
windmin/: FanCurve.py  MainFrame.py  Version.py  Windmin.py  __main__.py
windmin/locales/: LINGUAS  windmin.pot
windmin/locales/de/LC_MESSAGES/: windmin.po
windmin/locales/es/LC_MESSAGES/: windmin.po
windmin/locales/fr/LC_MESSAGES/: windmin.po
windmin/locales/hr/LC_MESSAGES/: windmin.po
windmin/locales/hu/LC_MESSAGES/: windmin.po
windmin/locales/nl/LC_MESSAGES/: windmin.po
windmin/locales/pt_BR/LC_MESSAGES/: windmin.po
windmin/locales/ru/LC_MESSAGES/: windmin.po
windmin/locales/sr_RS/LC_MESSAGES/: windmin.po
windmin/locales/tr/LC_MESSAGES/: windmin.po
windmin/locales/uk/LC_MESSAGES/: windmin.po
windmin/locales/zh_CN/LC_MESSAGES/: windmin.po
