[tool.poetry]
name = "windmin"
version = "0.1.0"
description = "Yet another GUI for fancontrol"
authors = ["Michael John <michael.john@gmx.at>"]
license = "GPL"
include = ["images/*", "windmin/locales/**/LC_MESSAGES/*.mo"]

[tool.poetry.scripts]
windmin = 'windmin.__main__:main'

[tool.poetry.dependencies]
python = "^3.7"
python-gettext = "^4.0"
wxPython = "^4.1.1"
matplotlib = "^3.5.2"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = false

[tool.poetry.urls]
homepage = "https://github.com/amstelchen/windmin"
repository = "https://github.com/amstelchen/windmin"
documentation = "https://github.com/amstelchen/windmin"
